Bring Support console to Wheel Hub admin parity for billing, help, staff, and ops.
Adds plan editing, shadow help, tickets, notifications, feature flags, audit logs, and staff roster with permission gates plus integration coverage.

Co-authored-by: Cursor <cursoragent@cursor.com>